# docquery

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
backend/app/: config.py  main.py
backend/app/api/: models.py  routes.py
backend/app/conversation/: history.py  llm_client.py  prompt_builder.py  prompt_builder_v2.py
backend/app/document/: chunker_v2.py  extraction_cache.py  image_renderer.py  models.py  naive_processor.py  structure_extractor.py  vision_extractor.py  vision_prompt.py  vision_response.py
backend/app/retrieval/: bootstrap.py  vector_store.py  vector_store_v2.py
backend/tests/: conftest.py
backend/tests/conversation/: test_prompt_builder_v2.py
backend/tests/extraction/: test_cache_regression.py  test_chunker_v2.py  test_extraction_cache.py  test_structure_extractor.py  test_vision_gt.py  test_vision_response.py  test_vision_structure.py
backend/tests/retrieval/: test_eval_retrieval.py  test_vector_store_v2_openai.py
data/eval/: bgk_2024_qa_eval.json  bgk_extraction_p054_gt.json  bgk_extraction_p059_gt.json  bgk_extraction_p095_gt.json
data/extraction/: I.json  II.json  IV.json  VI.json  VII.json  X.json
data/extraction_v1/: III.json  IV.json  IX.json  V.json  VI.json  VIII.json
data/extraction_v2/: I.json  II.json  III.json  IV.json  IX.json  V.json  VI.json  VII.json  VIII.json  X.json
frontend/: Dockerfile  app.py
notebooks/: experiment_chunk_size_topk_v2.ipynb  experiment_chunk_size_topk_v2_openai.ipynb  explore_conversation.ipynb  explore_extraction.ipynb  explore_extraction_part2.ipynb  explore_processor.ipynb  test_vision_extraction_on_gt_joined.ipynb
notebooks/archive/: explore_chunker_v3.ipynb  explore_conversation_vision.ipynb  explore_extraction_new2.ipynb  explore_extraction_part3_selected_pages.ipynb  explore_json_swallow.ipynb  explore_production_chat_debug_v1.ipynb  explore_vision_vector_store_v2.ipynb  test.ipynb  verify_vision_extraction.ipynb
scripts/: fix_swallowed_pages.py  repostprocess_cache.py
